# via-sphere-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASES.md
.github/workflows/: rust.yml
docs/: Global_Navigation.md  Spherical_Vector_Geometry.md
docs/uml/: latlong_class_diagram.puml  sphere_class_diagram.puml
src/: latlong.rs  lib.rs  sphere.rs  trig.rs
src/latlong/: geojson.rs
src/sphere/: arc.rs  arc3d.rs  arc3dstring.rs  arcstring.rs  great_circle.rs  great_circle3d.rs  point3d.rs
src/sphere/great_circle/: intersection.rs
